player/players/animals.css
.animal-info-dialog {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #00000044;
  z-index: 9997;
  display: flex;
  flex-direction: row;
}

.animal-info-close {
  position: fixed;
  bottom: 5px;
  right: 5px;
  z-index: 9998;
}

.animal-info-sidebar {
  width: 33%;
  background: var(--theme-dark-accent-background);
}

.animal-image {
  width: 100%;
  height: auto;
}

.animal-info-name {
  padding: 10px;
  margin-top: 0;
  text-align: center;
}

.animal-sidebar-info {
  padding: 10px;
  font-size: 9pt;
}

.animal-info {
  padding: 10px;
  margin: 0;
  width: calc(100% - 33%);
  background: var(--theme-dark-background);
  box-sizing: border-box;
}

